<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tasks">

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.stefanshome.simpletasks.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_servers"
        android:name="com.stefanshome.simpletasks.ui.servers.ServersFragment"
        android:label="@string/menu_servers"
        tools:layout="@layout/fragment_servers" />

    <fragment
        android:id="@+id/nav_preferences"
        android:name="com.stefanshome.simpletasks.ui.preferences.PreferencesFragment"
        android:label="@string/menu_preferences"
        tools:layout="@layout/fragment_preferences" />
</navigation>