<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="General">
            <menu>
                <item
                    android:id="@+id/nav_tasks"
                    android:icon="@drawable/baseline_article_24"
                    android:title="@string/menu_tasks" />
                <item
                    android:id="@+id/nav_servers"
                    android:icon="@drawable/baseline_cloud_24"
                    android:title="@string/menu_servers" />
                <item
                    android:id="@+id/nav_preferences"
                    android:icon="@drawable/baseline_build_24"
                    android:title="@string/menu_preferences" />
            </menu>
        </item>

        <item android:title="Collections">
            <menu>
                <item
                    android:id="@+id/nav_collections"
                    android:icon="@drawable/baseline_cloud_24"
                    android:title="w.x.y.z" />
            </menu>
        </item>
    </group>
</menu>