<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.servers.ServersFragment">

    <!-- No servers configured text
    <TextView
        android:id="@+id/text_no_servers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> -->

    <androidx.cardview.widget.CardView
        android:id="@+id/containerBox"
        android:layout_width="363dp"
        android:layout_height="280dp"
        app:cardBackgroundColor="@color/dark_gray"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintWidth_percent="0.20">

        <ImageView
            android:id="@+id/containerImageName"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_drive_file_rename_outline_24"
            android:translationX="12dp"
            android:translationY="26dp"
            app:tint="@color/light_blue" />

        <EditText
            android:id="@+id/containerEditTextName"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/containerEditTextNameHint"
            android:inputType="text"
            android:maxLength="30"
            android:padding="8dp"
            android:textSize="20sp"
            android:translationX="60dp"
            android:translationY="20dp" />

        <ImageView
            android:id="@+id/containerImageIP"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_http_24"
            android:translationX="16dp"
            android:translationY="86dp"
            app:tint="@color/light_blue" />

        <EditText
            android:id="@+id/containerEditTextIP"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/containerEditTextIPHint"
            android:inputType="text"
            android:maxLength="128"
            android:padding="8dp"
            android:textSize="20sp"
            android:translationX="60dp"
            android:translationY="80dp"
            android:scrollHorizontally="true"
            android:maxLines="1"/>

        <ImageView
            android:id="@+id/containerImagePassword"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_password_24"
            android:translationX="16dp"
            android:translationY="146dp"
            app:tint="@color/light_blue" />

        <EditText
            android:id="@+id/containerEditTextPassword"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/containerEditTextPassword"
            android:inputType="textPassword"
            android:maxLength="128"
            android:padding="8dp"
            android:textSize="20sp"
            android:translationX="60dp"
            android:translationY="140dp"
            android:scrollHorizontally="true"
            android:maxLines="1"/>

        <ImageButton
            android:id="@+id/containerImageButtonPasswordVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/baseline_visibility_24"
            app:tint="@color/light_blue"
            android:background="?android:selectableItemBackground"
            android:translationX="307dp"
            android:translationY="150dp" />

        <ImageView
            android:id="@+id/containerImageTLS"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_https_24"
            android:translationX="16dp"
            android:translationY="202dp"
            app:tint="@color/light_blue" />

        <TextView
            android:id="@+id/containerTextTLS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/containerTextTLS"
            android:textSize="20sp"
            android:translationX="60dp"
            android:translationY="200dp" />

        <Switch
            android:id="@+id/containerT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="300dp"
            android:translationY="208dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>